--- a/configure.ac
+++ b/configure.ac
@@ -172,6 +172,16 @@ if test "$enable_upnp" = "yes"; then
 	AC_DEFINE(ENABLE_UPNP,1,[include UPNP support - currently broken])
 fi
 
+AC_ARG_ENABLE(webif,
+	AS_HELP_STRING(--disable-webif,disable webif),
+	,[enable_webif=yes])
+
+AM_CONDITIONAL(ENABLE_WEBIF,test "$enable_webif" = "yes")
+
+if test "$enable_webif" = "yes"; then
+	AC_DEFINE(ENABLE_WEBIF,1,[include webif])
+fi
+
 AC_ARG_ENABLE(extupdate,
 	AS_HELP_STRING(--enable-extupdate,include extended update routine),
 	,[enable_extupdate=no])
