remove Color Settings, PSI

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -104,14 +104,12 @@ libneutrino_gui_a_SOURCES = \
 
 if BOXTYPE_SPARK
 libneutrino_gui_a_SOURCES += \
-	3dsetup.cpp \
-	psisetup.cpp
+	3dsetup.cpp 
 endif
 
 if BOXTYPE_DUCKBOX
 libneutrino_gui_a_SOURCES += \
-	3dsetup.cpp \
-	psisetup.cpp
+	3dsetup.cpp 
 endif
 
 if ENABLE_GRAPHLCD
