remove unmaintained icons

--- a/data/icons/Makefile.am
+++ b/data/icons/Makefile.am
@@ -21,7 +21,7 @@ locale_unmaintained = \
 	locale/unmaintained/svenska.png
 
 install_DATA  = $(locale)
-install_DATA += $(locale_unmaintained)
+#install_DATA += $(locale_unmaintained)
 
 install_DATA += \
 	0.png \
