fix, add theme, gray-black, makefile.am

--- a/data/themes/Makefile.am
+++ b/data/themes/Makefile.am
@@ -8,7 +8,7 @@ install_DATA = \
 	DarkBrown.theme \
 	Gray.theme \
 	Gray-Black.theme
-	Grey-Blue.theme \
+	Gray-Blue.theme \
 	MonoChrom.theme \
 	Olive.theme \
 	Red.theme \
