add new themes, thx cst

--- a/data/themes/Makefile.am
+++ b/data/themes/Makefile.am
@@ -10,6 +10,7 @@ install_DATA = \
 	Gray-Black.theme \
 	Gray-Blue.theme \
 	MonoChrom.theme \
+	NeutrinoV3.theme \
 	Olive.theme \
 	Red.theme \
 	VirginMedia.theme
